--- a/HabitTracker/HabitTracker.Android/HabitTracker.Android.csproj
+++ b/HabitTracker/HabitTracker.Android/HabitTracker.Android.csproj
@@ -91,5 +91,8 @@
       <Name>HabitTracker</Name>
     </ProjectReference>
   </ItemGroup>
+  <ItemGroup>
+    <AndroidResource Include="Resources\drawable\icon_calander.png" />
+  </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath)\Xamarin\Android\Xamarin.Android.CSharp.targets" />
 </Project>
