--- a/HabitTracker/HabitTracker.iOS/HabitTracker.iOS.csproj
+++ b/HabitTracker/HabitTracker.iOS/HabitTracker.iOS.csproj
@@ -142,4 +142,7 @@
       <Name>HabitTracker</Name>
     </ProjectReference>
   </ItemGroup>
+  <ItemGroup>
+    <BundleResource Include="Resources\icon_calander.png" />
+  </ItemGroup>
 </Project>
