--- a/HabitTracker/HabitTracker.iOS/HabitTracker.iOS.csproj
+++ b/HabitTracker/HabitTracker.iOS/HabitTracker.iOS.csproj
@@ -143,6 +143,12 @@
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
-    <BundleResource Include="Resources\icon_calander.png" />
+    <BundleResource Include="Resources\icon_calender%403x.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <BundleResource Include="Resources\icon_calender%402x.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <BundleResource Include="Resources\icon_calender.png" />
   </ItemGroup>
 </Project>
