--- a/HabitTracker/HabitTracker/HabitTracker.csproj
+++ b/HabitTracker/HabitTracker/HabitTracker.csproj
@@ -23,5 +23,14 @@
     <Compile Update="Views\NewHabitPage.xaml.cs">
       <DependentUpon>NewHabitPage.xaml</DependentUpon>
     </Compile>
+    <Compile Update="Views\CalenderPage.xaml.cs">
+      <DependentUpon>CalenderPage.xaml</DependentUpon>
+    </Compile>
+  </ItemGroup>
+
+  <ItemGroup>
+    <EmbeddedResource Update="Views\CalenderPage.xaml">
+      <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
+    </EmbeddedResource>
   </ItemGroup>
 </Project>
