--- a/HabitTracker/HabitTracker.Android/HabitTracker.Android.csproj
+++ b/HabitTracker/HabitTracker.Android/HabitTracker.Android.csproj
@@ -152,5 +152,8 @@
   <ItemGroup>
     <AndroidResource Include="Resources\drawable\logo.png" />
   </ItemGroup>
+  <ItemGroup>
+    <AndroidResource Include="Resources\drawable\icon_analytics.png" />
+  </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath)\Xamarin\Android\Xamarin.Android.CSharp.targets" />
 </Project>
