--- a/HabitTracker/HabitTracker.iOS/HabitTracker.iOS.csproj
+++ b/HabitTracker/HabitTracker.iOS/HabitTracker.iOS.csproj
@@ -184,4 +184,13 @@
   <ItemGroup>
     <BundleResource Include="Resources\icon_analytics%402x.png" />
   </ItemGroup>
+  <ItemGroup>
+    <BundleResource Include="Resources\icon_settings.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <BundleResource Include="Resources\icon_settings%402x.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <BundleResource Include="Resources\icon_settings%403x.png" />
+  </ItemGroup>
 </Project>
