--- a/HabitTracker/HabitTracker.Android/HabitTracker.Android.csproj
+++ b/HabitTracker/HabitTracker.Android/HabitTracker.Android.csproj
@@ -167,5 +167,8 @@
   <ItemGroup>
     <AndroidResource Include="Resources\drawable\splash_screen.png" />
   </ItemGroup>
+  <ItemGroup>
+    <AndroidResource Include="Resources\drawable\icon_settings.png" />
+  </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath)\Xamarin\Android\Xamarin.Android.CSharp.targets" />
 </Project>
