--- a/HabitTracker/HabitTracker.iOS/HabitTracker.iOS.csproj
+++ b/HabitTracker/HabitTracker.iOS/HabitTracker.iOS.csproj
@@ -208,4 +208,13 @@
   <ItemGroup>
     <BundleResource Include="Resources\icon_calender_weekly.png" />
   </ItemGroup>
+  <ItemGroup>
+    <BundleResource Include="Resources\trashcan%403x.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <BundleResource Include="Resources\trashcan%402x.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <BundleResource Include="Resources\trashcan.png" />
+  </ItemGroup>
 </Project>
